--- a/depth_discrimination_MTurk/DepthDiscrim_CSS.css
+++ b/depth_discrimination_MTurk/DepthDiscrim_CSS.css
@@ -400,6 +400,15 @@ body {
 
 }
 
+.feedbackDiv{
+  position: fixed;
+  display: none;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+
 .meanDepth_responseDiv{
   padding-top: 550px; /*20px*/
   padding-left: 200px;
